--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@ body {
   padding-top: 30px;
   padding-bottom: 50px;
   text-align: center;
-  background: url(https://img.freepik.com/free-vector/minimal-desktop-background-white-abstract-design-vector_53876-135921.jpg?w=2000);
+  background: url(./assets/bg.jpeg);
   background-size: cover;
 }
 
