--- a/estilos.css
+++ b/estilos.css
@@ -28,12 +28,18 @@ background-size: cover;
   padding-bottom: 50px;
 }
 
-.caixa3 {
-  height: 600px;
+.RELATORIO_1 {
+  height: 900px;
   background: #ffffff;
   text-align: center;
-  
 }
+
+.RELATORIO_2 {
+  height: 900px;
+  background: #ffffff;
+  text-align: center;
+}
+
 
 .caixa4 {
   height: 700px;
@@ -169,36 +175,6 @@ a:hover {
   padding-bottom: 10px;
 }
 
-.linkwhatsapp {
-  color: white;
-  background: green;
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  border-radius: 10px;
-  text-decoration: none;
-}
-
 .outroscontatos {
   padding-top: 10px;
-}
-
-@media (max-width: 600px) {
-  .menu {
-    display: none;
-  }
-  
-.audio1 {
-  text-align: center;
-  
-  .habilidade {
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 30px;
-
-  h1 {
-  text-align: center;
-  font-size: 10px;
-  }
 }
