--- a/estilos.css
+++ b/estilos.css
@@ -228,6 +228,11 @@ a:hover {
   text-align: center;
 }
 
+.RELATORIO_6 {
+  max-height: 1200px;
+  background: #ffffff;
+  text-align: center;
+}
 
 
 
@@ -363,7 +368,32 @@ a:hover {
   border-radius: 15px;
 }
 
+.grid_6{
+  max-height: 700px;
+  margin-left: auto;
+  margin-right: auto; 
+  display: grid;
+  grid-template-columns: 33% fit-content(33%) 33%;
+  grid-auto-rows: 50%;
+}
 
+.grid-item6  > img {
+  object-fit: cover;
+  max-width: 600px;
+  max-height: auto;  
+  height: auto;
+  width: auto;
+  border-radius: 15px;
+}
+
+.grid-item6  > video {
+  object-fit: cover;
+  max-width: 600px;
+  max-height: auto;  
+  height: auto;
+  width: auto;
+  border-radius: 15px;
+}
 .grid_projeto{
  
   display: grid;
